Minecraft 1.20.6 Update (#55)
* Ignore Tests which don't run with 1.20.6 due to missing server initializations

* Update spigot dependency to 1.20.6

* Update item menus to 1.20.5 format

Includes code cleanup of left-over pre-1.13 stuff

* Refactor ItemUtil class

* Make sure bukkit-utils compiles with minecraft 1.20.6

* Remove leftover item and block duration from numeric ID times

* Update ItemStackUtil parsing from ItemMeta to Item Components

* Update item requirement parsing for challenges
- move parsing code to factory & item utils where all the other parsing occurs
- decouple requirement amount from stack size. We should not rely on ItemStack being able to have larger amounts than maxStackSize
- change parsing to use item components instead of nbt tags
- including tests
- cleanup code

* Change NBT command to display new item component info

* Remove the now redundant NBT and Reflection stuff

* Use standard Bukkit YamlConfiguration to avoid duplicating comments on every save

* Remove redundant FileUtil methods

* Implement challenges converter

- The converter converts all challenges to the new item format.
- Item meta from the default challenges configuration are automatically converted.
- Other item meta is moved to the comments and will have to be converted manually.
- The explanation is moved to the config header, instead of a comment on the version number.

* Read configs as UTF8 to support special characters

* Convert config.yml to new item formats

* Register item component converter and auto convert on startup

* Run converter before config files are loaded

* Automatically update material for SIGN and SAPLING to oak variants

These were used previously as defaults and may not have been updated.

* Handle item type parsing for materials that are not supported by the /give command

* Fully convert head components (the paper converter did not fix everything)

* fire enchantment is now called fir